gccida/c3/prepare_function_start
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/prepare_function_start/src/function.c:6689:12: error: expected expression
*( _OWORD *)&v0->x_nonlocal_labels = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/prepare_function_start/src/function.c:6689:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v0->x_nonlocal_labels = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/prepare_function_start/src/function.c:6690:12: error: expected expression
*( _OWORD *)&v0->x_nonlocal_goto_handler_labels = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/prepare_function_start/src/function.c:6690:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v0->x_nonlocal_goto_handler_labels = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/prepare_function_start/src/function.c:6698:12: error: expected expression
*( _OWORD *)&v1->original_arg_vector = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/prepare_function_start/src/function.c:6698:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->original_arg_vector = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/prepare_function_start/src/function.c:6712:12: error: expected expression
*( _OWORD *)&v1->x_temp_slots = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/prepare_function_start/src/function.c:6712:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->x_temp_slots = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/prepare_function_start/src/function.c:6714:12: error: expected expression
*( _OWORD *)&v1->x_rtl_expr_chain = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/prepare_function_start/src/function.c:6714:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->x_rtl_expr_chain = 0LL; 
   ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/prepare_function_start/src/obj/function.o] Error 1
